<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image2"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/w"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logoImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="279dp"
        android:layout_height="71dp"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/lobachevskytext"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginBottom="104dp"
        android:background="@color/black"
        android:ems="10"
        android:fontFamily="@font/open_sans_light"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/blueloba"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginBottom="176dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/open_sans_light"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:shadowColor="@color/teal_700"
        android:textColor="@color/blueloba"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@color/black"
        android:textColorLink="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reg_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reg_login_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="27dp"
        android:layout_height="23dp"
        android:contentDescription="@string/eys_icon"
        app:layout_constraintBottom_toBottomOf="@+id/reg_pass"
        app:layout_constraintEnd_toEndOf="@+id/reg_pass"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="@+id/reg_pass"
        app:layout_constraintTop_toTopOf="@+id/reg_pass"
        app:layout_constraintVertical_bias="0.56"
        app:srcCompat="@mipmap/eyes_image" />

</androidx.constraintlayout.widget.ConstraintLayout>