<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image2"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/t"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:fontFamily="@font/open_sans_light"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/blueloba"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_Bar"
        app:layout_constraintVertical_bias="0.411" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="347dp"
        android:layout_height="51dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/black"
        android:ems="10"
        android:fontFamily="@font/open_sans_light"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:shadowColor="@color/teal_700"
        android:textColor="@color/blueloba"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@color/white"
        android:textColorLink="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <Button
        android:id="@+id/reg_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/create_password"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_Bar"
        app:layout_constraintVertical_bias="0.787" />

    <Button
        android:id="@+id/reg_login_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/Already_have_an_account"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_Bar"
        app:layout_constraintVertical_bias="0.902" />

    <ProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_confirm_pass"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:fontFamily="@font/open_sans_light"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/blueloba"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="81dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/lobaimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progress_Bar"
        app:srcCompat="@drawable/image1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="103dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:scrollbarSize="4dp"
        android:shadowColor="@color/black"
        android:text="@string/hello_egister_togetstarted"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progress_Bar"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="23dp"
        android:layout_height="22dp"
        android:contentDescription="@string/passimage1"
        app:layout_constraintBottom_toBottomOf="@+id/reg_pass"
        app:layout_constraintEnd_toEndOf="@+id/reg_pass"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="@+id/reg_pass"
        app:layout_constraintTop_toTopOf="@+id/reg_pass"
        app:layout_constraintVertical_bias="0.518"
        app:srcCompat="@mipmap/eyes_image" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="25dp"
        android:layout_height="23dp"
        android:contentDescription="@string/passimage2"
        app:layout_constraintBottom_toBottomOf="@+id/reg_confirm_pass"
        app:layout_constraintEnd_toEndOf="@+id/reg_confirm_pass"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="@+id/reg_confirm_pass"
        app:layout_constraintTop_toTopOf="@+id/reg_confirm_pass"
        app:layout_constraintVertical_bias="0.48"
        app:srcCompat="@mipmap/eyes_image" />

</androidx.constraintlayout.widget.ConstraintLayout>


