<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerimage"
    tools:context=".setupAccount">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setup_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/bluloba2"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="223dp"
        android:layout_height="223dp"
        android:src="@drawable/h"
        app:civ_border_color="@color/black"
        app:civ_border_overlay="true"
        app:civ_border_width="2dp"
        app:civ_circle_background_color="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <Button
        android:id="@+id/setup_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="380dp"
        android:layout_height="58dp"
        android:layout_marginBottom="228dp"
        android:backgroundTint="@color/bluloba2"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/save_acc2_sett"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/setup_name"
        android:layout_width="380dp"
        android:layout_height="58dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="7dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/save_account_sett"

        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/account_sett_name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

</androidx.constraintlayout.widget.ConstraintLayout>